--- a/index.css
+++ b/index.css
@@ -18,6 +18,13 @@
 
   .body {
     font-family: 'Roboto Mono', monospace;
+      padding-top: 80px;
+      padding-left: 30;
+    
+  }
+
+  .testy {
+    opacity: 0.8;
   }
   
   .bg-image {
@@ -108,7 +115,16 @@
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.6);
   }
 
- 
+  .card-columns {
+    @include media-breakpoint-only(lg) {
+      column-count: 4;
+    }
+    @include media-breakpoint-only(xl) {
+      column-count: 5;
+    }
+  }
+
+  
   
   /* Fallback for Edge
   -------------------------------------------------- */
